# genjaxmix

./: .gitignore  404.html  index.html  lpm_experiment_script.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: release.yml
docs/: index.md
docs/reference/: api.md  conjugacy.md  inference.md
docs/tutorials/: dpmm_ground_up.ipynb  getting_started.md  getting_started.py  sub_cluster.ipynb
examples/: clean.ipynb  lpm_experiment_script.py  vector.ipynb
genjaxmix/_experimental/: translate.py
genjaxmix/analytical/: logpdf.py  posterior.py
genjaxmix/model/: __init__.py  compile.py  dsl.py  gibbs.py  model.py  utils.py  viz.py
genspn/: distributions.py  genjax.py  histogram.py  io.py  smc.py
notebooks/: scratch.ipynb  split_merge.ipynb
src/genjaxmix/: __init__.py  _smc.py  conjugacy.py  dpmm.py  smc.py
src/genspn/: distributions.py  histogram.py  io.py  smc.py
test/: test_compile.py  test_distribution.py  test_histogram.py  test_logpdf.py  test_mixture_model.py  test_parameter_proposal.py  test_score.py
