[project]
name = "genjaxmix"
version = "0.1.0"
description = "dpmm in genjax"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "altair>=5.5.0",
    "equinox>=0.11.11",
    "huggingface-hub>=0.26.2",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "keyring>=25.5.0",
    "keyrings-google-artifactregistry-auth>=1.1.2",
    "matplotlib>=3.9.2",
    "plum-dispatch>=2.5.4",
    "polars>=1.15.0",
    "pyarrow>=18.1.0",
    "pygments>=2.18.0",
    "pytest>=8.3.3",
    "safetensors>=0.5.0",
]

[[tool.uv.index]]
name="gcp"
url="https://us-west1-python.pkg.dev/probcomp-caliban/probcomp/simple/"
